socials/background.css
html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  font-family: monospace;
  background: #050505;
  color: white;
  overflow: hidden;
}


.grid {
  position: fixed;
  inset: 0;
  background-image:
    linear-gradient(rgba(255,255,255,0.05) 1px, transparent 1px),
    linear-gradient(90deg, rgba(255,255,255,0.05) 1px, transparent 1px);
  background-size: 40px 40px;
  animation: gridMove 25s linear infinite;
  z-index: 0;
}

@keyframes gridMove {
  from { background-position: 0 0; }
  to { background-position: -400px 400px; }
}


.crt {
  position: fixed;
  inset: 0;
  background: repeating-linear-gradient(
    to bottom,
    rgba(255,255,255,0.03),
    rgba(255,255,255,0.03) 1px,
    transparent 1px,
    transparent 3px
  );
  pointer-events: none;
  z-index: 5;
}


header {
  position: absolute;
  top: 30px;
  left: 40px;
  z-index: 10;
}

header h1 {
  font-size: 26px;
  letter-spacing: 3px;
}

header span {
  border: 2px solid white;
  padding: 2px 8px;
  cursor: pointer;
  transition: 0.2s ease;
}

header span:hover {
  background: white;
  color: black;
}


.left-panel {
  position: absolute;
  left: 60px;
  top: 35px;
  width: 520px;   
  z-index: 10;
}

.left-panel h2 {
  margin-bottom: 25px;
  font-size: 28px;   
}

.option {
  display: block;
  border: 2px solid white;
  padding: 20px;        
  margin-bottom: 16px;  
  font-size: 18px;      
  text-decoration: none;
  color: white;
  transition: 0.2s ease;
}

.option:hover {
  background: white;
  color: black;
}

.right-panel {
  position: absolute;
  bottom: 350px;
  left: 2150px;   
  font-size: 20px;
  line-height: 1.6;
  font-family:Bahnschrift, Arial, sans-serif;
  opacity: 0.85;
  z-index: 10;
}

#character {
  position: absolute;
  right: 390px;
  bottom: 100;

  width: 950px;
  height: auto;   
  z-index: 8;
  transition: opacity 0.3s ease;
  animation: float 4s ease-in-out infinite;
}


@keyframes float {
  0% { transform: translateY(0px); }
  50% { transform: translateY(-12px); }
  100% { transform: translateY(0px); }
}

.back-button {
  position: fixed;
  bottom: 20px;
  left: 60px;

  padding: 12px 18px;
  border: 2px solid white;

  color: white;
  text-decoration: none;
  font-size: 16px;

  transition: 0.2s ease;
  z-index: 20;
}

.back-button:hover {
  background: white;
  color: black;
}

